--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "compile-contract-types": "typechain --target ethers-v5 --out-dir './contracts/types' './contracts/*.json'",
     "clean": "rm -rf cache artifacts typechain",
     "compile": "./scripts/hh-wrapper compile && yarn run makeUserOps",
     "makeUserOps": "./scripts/makeUserOps",
@@ -17,29 +18,29 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "^7.0.1",
+    "@typechain/ethers-v5": "^8.0.5",
     "@types/chai": "^4.2.21",
     "@types/node": "^16.4.12",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.2",
-    "hardhat": "^2.6.6",
+    "hardhat": "^2.8.0",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.1.0",
-    "typechain": "^5.1.2"
+    "typechain": "^6.0.5"
   },
   "dependencies": {
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@openzeppelin/contracts": "^4.2.0",
-    "@typechain/hardhat": "^2.3.0",
+    "@typechain/hardhat": "^3.0.0",
     "@types/mocha": "^9.0.0",
     "ethereumjs-util": "^7.1.0",
     "ethereumjs-wallet": "^1.0.1",
     "hardhat-deploy": "^0.9.3",
     "hardhat-deploy-ethers": "^0.3.0-beta.11",
     "source-map-support": "^0.5.19",
-    "typescript": "^4.3.5"
+    "typescript": "^4.5.4"
   }
 }
